A bunch of manual warnings fixes